# ecommerce

./: .gitignore  LICENSE  README.md  pyproject.toml
Backend/: app.py
fastApp/: .gitignore  app.py
sql_app/: database.py  models.py
