[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "ecommerce for sellers"
authors = ["therishabhmittal05 <rishabhmittal928@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
